--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,7 +17,7 @@
 
 /* Navbar */
 
-.row {
+.sticky-navbar {
   position: fixed;
   width: 100%;
   margin: 0;
@@ -52,7 +52,7 @@
 
 #header {
   width: 100vw;
-  height: 89vh;
+  height: 100vh;
 }
 
 #header h1 {
